--- a/Services.html
+++ b/Services.html
@@ -107,7 +107,7 @@
               <li class="nav-item"><a class="nav-link" href="about">About Us</a></li>
               <li class="nav-item"><a class="nav-link" href="Services">Services</a></li>
                <li class="nav-item"><a class="nav-link" href="findaproperty">Find a Property</a></li>
-               <li class="nav-item"><a class="nav-link" href="career">Carrer</a></li>
+               <li class="nav-item"><a class="nav-link" href="career">Career</a></li>
               <li class="nav-item"><a class="nav-link" href="contact">Contact Us</a></li>
             </ul>
           </div>
