--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -114,7 +114,7 @@
               <li class="nav-item"><a class="nav-link" href="about">About Us</a></li>
               <li class="nav-item"><a class="nav-link" href="Services">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="findaproperty">Find a Property</a></li>
-                 <li class="nav-item"><a class="nav-link" href="career">Carrer</a></li>
+                 <li class="nav-item"><a class="nav-link" href="career">Career</a></li>
               <!-- <li class="nav-item submenu">
                 <a class="nav-link" href="projects">Projects</a>
                 <ul>
