--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ s0.parentNode.insertBefore(s1,s0);
               <li class="nav-item"><a class="nav-link" href="about">About Us</a></li>
               <li class="nav-item"><a class="nav-link" href="Services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="findaproperty">Find a Property</a></li>
-              <li class="nav-item"><a class="nav-link" href="career">Carrer</a></li>
+              <li class="nav-item"><a class="nav-link" href="career">Career</a></li>
               <li class="nav-item"><a class="nav-link" href="contact">Contact Us</a></li>
             </ul>
           </div>
