--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
   }
 
   .contact-image {
-    background: url('images/Advpimages/Popup Banner.webp') no-repeat center center;
+    background: url('images/Advpimages/advp-contactform\ image.webp') no-repeat center center;
     background-size: cover;
     height: 500px;
     position: relative;
   }
 
   .modal-content {
-    height: 500px;
+  height: 441px;
   }
 
   .form-container {
